--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
     <link href="css/style.min.css" rel="stylesheet">
@@ -201,7 +202,7 @@
         </div>
         <div class="contacts__map">
           <div class="contacts__map-triangle"></div>
-          <iframe src="https://api-maps.yandex.ru/frame/v1/-/CZgenMJv" width="100%" height="100%" frameborder="0"></iframe>
+          <iframe src="https://api-maps.yandex.ru/frame/v1/-/CZgenMJv" frameborder="0"></iframe>
         </div>
       </div>
     </main>
