--- a/photo.html
+++ b/photo.html
@@ -87,17 +87,19 @@
     </div>
     <div class="panorama">
       <div class="panorama__img">
-        <picture>
-          <source media="(min-width: 1200px)"
+        <a href="#">
+          <picture>
+            <source media="(min-width: 1200px)"
                   srcset="img/panorama-desktop@1x.jpg 1x,
                           img/panorama-desktop@2x.jpg 2x">
-          <source media="(min-width: 700px)"
+            <source media="(min-width: 700px)"
                   srcset="img/panorama-tablet@1x.jpg 1x,
                           img/panorama-tablet@2x.jpg 2x">
-          <img src="img/panorama-mobile@1x.jpg"
+            <img src="img/panorama-mobile@1x.jpg"
                srcset="img/panorama-mobile@2x.jpg 2x"
                alt="panorama">
-        </picture>
+          </picture>
+        </a>
         <div class="panorama__day">Панорама дня</div>
       </div>
       <div class="panorama__comment">
@@ -113,17 +115,19 @@
     <div class="photos">
       <div class="photo-block">
         <div class="photo-block__img">
-          <picture>
-            <source media="(min-width: 1200px)"
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)"
                     srcset="img/photo-1-desktop@1x.jpg 1x,
                             img/photo-1-desktop@2x.jpg 2x">
-            <source media="(min-width: 700px)"
+              <source media="(min-width: 700px)"
                     srcset="img/photo-1-tablet@1x.jpg 1x,
                             img/photo-1-tablet@2x.jpg 2x">
-            <img src="img/photo-1-mobile@1x.jpg"
+              <img src="img/photo-1-mobile@1x.jpg"
                  srcset="img/photo-1-mobile@2x.jpg 2x"
                  alt="img-1">
-          </picture>
+            </picture>
+          </a>
         </div>
         <div class="photo-block__comment">
           <div class="photo-block__comment-wrapper">
@@ -139,17 +143,19 @@
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <picture>
-            <source media="(min-width: 1200px)"
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)"
                     srcset="img/photo-2-desktop@1x.jpg 1x,
                             img/photo-2-desktop@2x.jpg 2x">
-            <source media="(min-width: 700px)"
+              <source media="(min-width: 700px)"
                     srcset="img/photo-2-tablet@1x.jpg 1x,
                             img/photo-2-tablet@2x.jpg 2x">
-            <img src="img/photo-2-mobile@1x.jpg"
+              <img src="img/photo-2-mobile@1x.jpg"
                  srcset="img/photo-2-mobile@2x.jpg 2x"
                  alt="img-2">
-          </picture>
+            </picture>
+          </a>
         </div>
         <div class="photo-block__comment">
           <div class="photo-block__comment-wrapper">
@@ -165,17 +171,19 @@
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <picture>
-            <source media="(min-width: 1200px)"
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)"
                     srcset="img/photo-3-desktop@1x.jpg 1x,
                             img/photo-3-desktop@2x.jpg 2x">
-            <source media="(min-width: 700px)"
+              <source media="(min-width: 700px)"
                     srcset="img/photo-3-tablet@1x.jpg 1x,
                             img/photo-3-tablet@2x.jpg 2x">
-            <img src="img/photo-3-mobile@1x.jpg"
+              <img src="img/photo-3-mobile@1x.jpg"
                  srcset="img/photo-3-mobile@2x.jpg 2x"
                  alt="img-3">
-          </picture>
+            </picture>
+          </a>
         </div>
         <div class="photo-block__comment">
           <div class="photo-block__comment-wrapper">
@@ -191,17 +199,19 @@
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <picture>
-            <source media="(min-width: 1200px)"
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)"
                     srcset="img/photo-4-desktop@1x.jpg 1x,
                             img/photo-4-desktop@2x.jpg 2x">
-            <source media="(min-width: 700px)"
+              <source media="(min-width: 700px)"
                     srcset="img/photo-4-tablet@1x.jpg 1x,
                             img/photo-4-tablet@2x.jpg 2x">
-            <img src="img/photo-4-mobile@1x.jpg"
+              <img src="img/photo-4-mobile@1x.jpg"
                  srcset="img/photo-4-mobile@2x.jpg 2x"
                  alt="img-4">
-          </picture>
+            </picture>
+          </a>
         </div>
         <div class="photo-block__comment">
           <div class="photo-block__comment-wrapper">
@@ -217,17 +227,19 @@
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <picture>
-            <source media="(min-width: 1200px)"
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)"
                     srcset="img/photo-5-desktop@1x.jpg 1x,
                             img/photo-5-desktop@2x.jpg 2x">
-            <source media="(min-width: 700px)"
+              <source media="(min-width: 700px)"
                     srcset="img/photo-5-tablet@1x.jpg 1x,
                             img/photo-5-tablet@2x.jpg 2x">
-            <img src="img/photo-5-mobile@1x.jpg"
+              <img src="img/photo-5-mobile@1x.jpg"
                  srcset="img/photo-5-mobile@2x.jpg 2x"
                  alt="img-5">
-          </picture>
+            </picture>
+          </a>
         </div>
         <div class="photo-block__comment">
           <div class="photo-block__comment-wrapper">
@@ -243,17 +255,19 @@
       </div>
       <div class="photo-block">
         <div class="photo-block__img">
-          <picture>
-            <source media="(min-width: 1200px)"
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)"
                     srcset="img/photo-6-desktop@1x.jpg 1x,
                             img/photo-6-desktop@2x.jpg 2x">
-            <source media="(min-width: 700px)"
+              <source media="(min-width: 700px)"
                     srcset="img/photo-6-tablet@1x.jpg 1x,
                             img/photo-6-tablet@2x.jpg 2x">
-            <img src="img/photo-6-mobile@1x.jpg"
+              <img src="img/photo-6-mobile@1x.jpg"
                  srcset="img/photo-6-mobile@2x.jpg 2x"
                  alt="img-6">
-          </picture>
+            </picture>
+          </a>
         </div>
         <div class="photo-block__comment">
           <div class="photo-block__comment-wrapper">
